@@ -1,3 +1,6 @@
+tag-1.4.3 20220211
+  - Replace last_month_users with returning users
+
 tag-1.4.2 20220210
   - Change daily summary to include 3 full months, starting 4 months ago through last month
 
